se agregaron imagenes

--- a/pages/semestre-6/S6-INF-221.md
+++ b/pages/semestre-6/S6-INF-221.md
@@ -3,9 +3,9 @@ title: Algoritmos‌ ‌y‌ ‌Complejidad‌ ‌[Arroshuelo‌ ‌2]‌ ‌
 keywords: documentation theme, jekyll, technical writers, help authoring tools, hat replacements
 last_updated: July 3, 2016
 tags: ["Fundamentos de Informática"]
-summary: "a"
+summary: ""
 sidebar: main_sidebar
-permalink: s6-inf-221.html
+permalink: S6-INF-221.html
 folder: semestre-6
 ---
 
@@ -15,7 +15,7 @@ folder: semestre-6
 
 - Sigla:‌ ‌INF-221‌ ‌
 - Nivel‌ ‌de‌ ‌dificultad‌ ‌según‌ ‌estudiantes:‌ ‌7/10‌ ‌
-- Créditos‌ ‌USM‌ ‌:‌ ‌ ‌
+- Créditos‌ ‌USM‌ ‌:‌ ‌5★
 - Prerrequisitos:‌ ‌Discretas‌ ‌y‌ ‌LP.‌ ‌
 - Sitio‌ ‌oficial:‌ ‌ ‌
 
