--- a/pages/semestre-6/S6-INF-246.md
+++ b/pages/semestre-6/S6-INF-246.md
@@ -5,7 +5,7 @@ last_updated: July 3, 2016
 tags: ["Infraestructura TIC"]
 summary: "‌"
 sidebar: main_sidebar
-permalink: INF-246.html
+permalink: S6-INF-246.html
 folder: semestre-6
 ---
 
@@ -15,7 +15,7 @@ folder: semestre-6
 
 - Sigla:‌ ‌INF-246‌ ‌
 - Nivel‌ ‌de‌ ‌dificultad‌ ‌según‌ ‌estudiantes:‌ ‌6/10‌ ‌
-- Créditos‌ ‌USM‌ ‌:‌ ‌ ‌
+- Créditos‌ ‌USM‌ ‌:‌ ‌ 5★
 - Prerrequisitos:‌ ‌Arqui.‌ ‌
 - Sitio‌ ‌oficial:‌ ‌ ‌
 
