--- a/pages/semestre-6/S6-INF-292.md
+++ b/pages/semestre-6/S6-INF-292.md
@@ -5,7 +5,7 @@ last_updated: July 3, 2016
 tags: ["Sistemas de decisión informática"]
 summary: "‌"
 sidebar: main_sidebar
-permalink: INF-292.html
+permalink: S6-INF-292.html
 folder: semestre-6
 ---
 
@@ -15,7 +15,7 @@ folder: semestre-6
 
 - Sigla:‌ ‌INF-292‌ ‌
 - Nivel‌ ‌de‌ ‌dificultad‌ ‌según‌ ‌estudiantes:‌ ‌5/10‌ ‌
-- Créditos‌ ‌USM‌ ‌:‌ ‌ ‌
+- Créditos‌ ‌USM‌ ‌:‌ ‌ 5★
 - Prerrequisitos:‌ ‌Mate‌ ‌3.‌ ‌A‌ ‌saber‌ ‌por‌ ‌qué...‌ ‌
 - Sitio‌ ‌oficial:‌ ‌ ‌
 
@@ -26,4 +26,21 @@ Comentarios‌ ‌de‌ ‌los‌ ‌alumnos:‌ ‌
 
 - Estudiando‌ ‌de‌ ‌los‌ ‌certámenes‌ ‌anteriores‌ ‌se‌ ‌puede‌ ‌pasar.‌ ‌
 - Muchos‌ ‌de‌ ‌los‌ ‌ejercicios‌ ‌tipo‌ ‌certamen‌ ‌son‌ ‌mecanizables‌ ‌(Se‌ ‌hacen‌ ‌todos‌ ‌igual).‌ ‌
-- Si‌ ‌les‌ ‌aparecen‌ ‌2‌ ‌cero‌ ‌en‌ ‌el‌ ‌simplex,‌ ‌elijan‌ ‌el‌ ‌“positivo”.‌ ‌
+- Si‌ ‌les‌ ‌aparecen‌ ‌2‌ ‌cero‌ ‌en‌ ‌el‌ ‌simplex,‌ ‌elijan‌ ‌el‌ “positivo” ‌
+
+
+  <div class="row">
+    <div class="col-md-3">
+        <img src="images/semestre-6/opti1.jpg" alt="collapse">
+    </div>
+    <div class="col-md-3">
+        <img src="images/semestre-6/opti2.jpg" alt="collapse">
+    </div>
+    <div class="col-md-3">
+        <img src="images/semestre-6/opti3.jpg" alt="collapse">
+    </div>
+  </div>
+
+<div class="text-center mb-3">
+    <img src="images/semestre-6/opti4.jpg" alt="WAIF" height="auto">
+</div><br>
