--- a/pages/semestre-6/S6-INF-236.md
+++ b/pages/semestre-6/S6-INF-236.md
@@ -5,7 +5,7 @@ last_updated: July 3, 2016
 tags: ["Ingeniería de Software"]
 summary: "[A&DSW,‌ ‌pre-pre-feria,‌ ‌ANAL][Ex-Física‌ ‌de‌ ‌waffles‌ ‌(FISW)]‌"
 sidebar: main_sidebar
-permalink: INF-236.html
+permalink: S6-INF-236.html
 folder: semestre-6
 ---
 
@@ -13,7 +13,7 @@ folder: semestre-6
 
 - Sigla:‌ ‌INF-236‌ ‌
 - Nivel‌ ‌de‌ ‌dificultad‌ ‌según‌ ‌estudiantes:‌ ‌5/10‌ ‌
-- Créditos‌ ‌USM‌ ‌:‌ ‌ ‌
+- Créditos‌ ‌USM‌:‌ ‌5★
 - Prerrequisitos:‌ ‌LP‌ ‌y‌ ‌BD.‌ ‌
 - Sitio‌ ‌oficial:‌ ‌ ‌
 
@@ -34,3 +34,8 @@ folder: semestre-6
 - _Sugerencia_:‌ ‌anotar‌ ‌los‌ ‌proyectos‌ ‌que‌ ‌han‌ ‌tenido‌ ‌que‌ ‌hacer‌ ‌a‌ ‌lo‌ ‌largo‌ ‌del‌ ‌semestre‌ ‌para‌ ‌dar‌ ‌una‌ ‌idea‌ ‌de‌ ‌a‌ ‌qué‌ ‌se‌ ‌enfrentarán‌ ‌los‌ ‌alumnos‌ ‌
   - 2018-02:‌ ‌Detector‌ ‌de‌ ‌Zonas‌ ‌con‌ ‌Probabilidades‌ ‌de‌ ‌Incendio‌ ‌Mediante‌ ‌Datos‌ ‌Geoespaciales‌ ‌(cliente‌ ‌y‌ ‌profesor‌ ‌terminaron‌ ‌dejando‌ ‌el‌ ‌proyecto)‌ ‌
   - 2019-02:‌ ‌Uber‌ ‌de‌ ‌Técnicos‌
+
+
+<div class="text-center mb-3">
+    <img src="images/semestre-6/anal-1.jpg" alt="collapse" width="400px" height="auto">
+</div><br>
