--- a/pages/semestre-6/S6-INF-276.md
+++ b/pages/semestre-6/S6-INF-276.md
@@ -5,7 +5,7 @@ last_updated: July 3, 2016
 tags: ["Transversal e Integración"]
 summary: "‌"
 sidebar: main_sidebar
-permalink: INF-276.html
+permalink: S6-INF-276.html
 folder: semestre-6
 ---
 
@@ -13,7 +13,7 @@ folder: semestre-6
 
 - Sigla:‌ ‌INF-276‌ ‌
 - Nivel‌ ‌de‌ ‌dificultad‌ ‌según‌ ‌estudiantes:‌ ‌x/10‌ ‌{x=6‌ ‌si‌ ‌lo‌ ‌haces‌ ‌en‌ ‌serio,‌ ‌x=2‌ ‌si‌ ‌mientes}‌ ‌
-- Créditos‌ ‌USM‌ ‌:‌ ‌ ‌
+- Créditos‌ ‌USM‌ ‌:‌ ‌ ‌5★
 - Prerrequisitos:‌ ‌OrgSisInf.‌ ‌
 - Sitio‌ ‌oficial:‌ ‌ ‌
 
@@ -23,6 +23,11 @@ folder: semestre-6
 Codocedo‌ ‌es‌ ‌bakan‌ ‌:3‌ ‌
 
 # Comentarios‌ ‌de‌ ‌los‌ ‌alumnos:‌ ‌
+
+
+<div class="text-center mb-3">
+    <img src="images/semestre-6/infosoc1.png" alt="collapse" width="400px" height="auto">
+</div>
 
 ‌
 Ola‌ ‌nosotro‌ ‌somosel‌ ‌eqipo‌ ‌3‌
