se convirtio a h2 todos los h1 del semestre 6

--- a/pages/semestre-6/S6-INF-221.md
+++ b/pages/semestre-6/S6-INF-221.md
@@ -1,6 +1,6 @@
 ---
 title: Algoritmos‌ ‌y‌ ‌Complejidad‌ ‌[Arroshuelo‌ ‌2]‌ ‌
-keywords: documentation theme, jekyll, technical writers, help authoring tools, hat replacements
+keywords: Fundamentos de Informática, jekyll, technical writers, help authoring tools, hat replacements
 last_updated: July 3, 2016
 tags: ["Fundamentos de Informática"]
 summary: ""
@@ -11,7 +11,7 @@ folder: semestre-6
 
 [agregar‌ ‌descripción‌ ‌general‌ ‌o‌ ‌intro‌ ‌ingeniosa]‌ ‌
 
-# Información‌ ‌general:‌ ‌
+## Información‌ ‌general:‌ ‌
 
 - Sigla:‌ ‌INF-221‌ ‌
 - Nivel‌ ‌de‌ ‌dificultad‌ ‌según‌ ‌estudiantes:‌ ‌7/10‌ ‌
@@ -19,12 +19,12 @@ folder: semestre-6
 - Prerrequisitos:‌ ‌Discretas‌ ‌y‌ ‌LP.‌ ‌
 - Sitio‌ ‌oficial:‌ ‌ ‌
 
-# Contenidos:‌ ‌
+## Contenidos:‌ ‌
 
 [inserte‌ ‌contenidos‌ ‌aquí]‌ ‌
 ‌
 
-# Comentarios‌ ‌de‌ ‌los‌ ‌alumnos:‌ ‌
+## Comentarios‌ ‌de‌ ‌los‌ ‌alumnos:‌ ‌
 
 - Big‌ ‌O,‌ ‌Theta,‌ ‌Omega‌ ‌
 - EDD,‌ ‌la‌ ‌revancha.p‌ ‌
