--- a/pages/semestre-6/S6-INF-236.md
+++ b/pages/semestre-6/S6-INF-236.md
@@ -9,7 +9,7 @@ permalink: S6-INF-236.html
 folder: semestre-6
 ---
 
-# Información‌ ‌general:‌ ‌
+## Información‌ ‌general:‌ ‌
 
 - Sigla:‌ ‌INF-236‌ ‌
 - Nivel‌ ‌de‌ ‌dificultad‌ ‌según‌ ‌estudiantes:‌ ‌5/10‌ ‌
@@ -17,11 +17,11 @@ folder: semestre-6
 - Prerrequisitos:‌ ‌LP‌ ‌y‌ ‌BD.‌ ‌
 - Sitio‌ ‌oficial:‌ ‌ ‌
 
-# Contenidos:‌ ‌
+## Contenidos:‌ ‌
 
 [inserte‌ ‌contenidos‌ ‌aquí]‌
 
-# Comentarios‌ ‌de‌ ‌los‌ ‌alumnos:‌ ‌
+## Comentarios‌ ‌de‌ ‌los‌ ‌alumnos:‌ ‌
 
 - Fácil,‌ ‌pero‌ ‌odiaran‌ ‌el‌ ‌proyecto‌ ‌semestral‌ ‌:(‌ ‌
 - pre-HAR‌ ‌
