--- a/pages/semestre-6/S6-INF-246.md
+++ b/pages/semestre-6/S6-INF-246.md
@@ -11,7 +11,7 @@ folder: semestre-6
 
 [agregar‌ ‌descripción‌ ‌general‌ ‌o‌ ‌intro‌ ‌ingeniosa]‌ ‌
 
-# Información‌ ‌general:‌ ‌
+## Información‌ ‌general:‌ ‌
 
 - Sigla:‌ ‌INF-246‌ ‌
 - Nivel‌ ‌de‌ ‌dificultad‌ ‌según‌ ‌estudiantes:‌ ‌6/10‌ ‌
@@ -19,12 +19,12 @@ folder: semestre-6
 - Prerrequisitos:‌ ‌Arqui.‌ ‌
 - Sitio‌ ‌oficial:‌ ‌ ‌
 
-# Contenidos:‌ ‌
+## Contenidos:‌ ‌
 
 [inserte‌ ‌contenidos‌ ‌aquí]‌ ‌
 ‌
 
-# Comentarios‌ ‌de‌ ‌los‌ ‌alumnos:‌ ‌
+## Comentarios‌ ‌de‌ ‌los‌ ‌alumnos:‌ ‌
 
 - CAPAS!!‌ ‌CAPAS!!‌ ‌Las‌ ‌cebollas‌ ‌tienen‌ ‌capas,‌ ‌los‌ ‌ogros‌ ‌también‌ ‌y‌ ‌los‌ ‌SOs‌ ‌
 - Dinosaurios,‌ ‌Dinosaurios‌ ‌EVERYWHERE‌ ‌
@@ -37,3 +37,6 @@ folder: semestre-6
 - Vitoko‌ ‌te‌ ‌enseña‌ ‌lo‌ ‌que‌ ‌no‌ ‌aprendiste‌ ‌en‌ ‌Arqui‌ ‌ ‌
   ‌
   ‌
+<div class="text-center mb-3">
+    <img src="images/semestre-6/so1.png" alt="collapse" height="auto">
+</div>
