--- a/pages/semestre-6/S6-INF-292.md
+++ b/pages/semestre-6/S6-INF-292.md
@@ -11,7 +11,7 @@ folder: semestre-6
 
 [agregar‌ ‌descripción‌ ‌general‌ ‌o‌ ‌intro‌ ‌ingeniosa]‌ ‌
 
-# Información‌ ‌general:‌ ‌
+## Información‌ ‌general:‌ ‌
 
 - Sigla:‌ ‌INF-292‌ ‌
 - Nivel‌ ‌de‌ ‌dificultad‌ ‌según‌ ‌estudiantes:‌ ‌5/10‌ ‌
@@ -19,7 +19,7 @@ folder: semestre-6
 - Prerrequisitos:‌ ‌Mate‌ ‌3.‌ ‌A‌ ‌saber‌ ‌por‌ ‌qué...‌ ‌
 - Sitio‌ ‌oficial:‌ ‌ ‌
 
-# Contenidos:‌ ‌
+## Contenidos:‌ ‌
 
 [inserte‌ ‌contenidos‌ ‌aquí]‌ ‌
 Comentarios‌ ‌de‌ ‌los‌ ‌alumnos:‌ ‌
