--- a/pages/semestre-6/S6-INF-276.md
+++ b/pages/semestre-6/S6-INF-276.md
@@ -9,7 +9,7 @@ permalink: S6-INF-276.html
 folder: semestre-6
 ---
 
-# Información‌ ‌general:‌ ‌
+## Información‌ ‌general:‌ ‌
 
 - Sigla:‌ ‌INF-276‌ ‌
 - Nivel‌ ‌de‌ ‌dificultad‌ ‌según‌ ‌estudiantes:‌ ‌x/10‌ ‌{x=6‌ ‌si‌ ‌lo‌ ‌haces‌ ‌en‌ ‌serio,‌ ‌x=2‌ ‌si‌ ‌mientes}‌ ‌
@@ -17,12 +17,12 @@ folder: semestre-6
 - Prerrequisitos:‌ ‌OrgSisInf.‌ ‌
 - Sitio‌ ‌oficial:‌ ‌ ‌
 
-# Contenidos:‌ ‌
+## Contenidos:‌ ‌
 
 [inserte‌ ‌contenidos‌ ‌aquí]‌ ‌
 Codocedo‌ ‌es‌ ‌bakan‌ ‌:3‌ ‌
 
-# Comentarios‌ ‌de‌ ‌los‌ ‌alumnos:‌ ‌
+## Comentarios‌ ‌de‌ ‌los‌ ‌alumnos:‌ ‌
 
 
 <div class="text-center mb-3">
